--- a/package.json
+++ b/package.json
@@ -3,14 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -p 3003 --turbopack",
+    "dev": "next dev --turbopack -p 3003",
     "build": "next build --turbopack",
     "start": "next start -p 3003",
     "lint": "next lint",
-    "lint:fix": "next lint --fix"
+    "lint:fix": "next lint --fix",
+    "typecheck": "tsc -p tsconfig.json --noEmit",
+    "lint:ci": "next lint --max-warnings=0"
   },
   "engines": {
-    "node": ">=20.0.0"
+    "node": "20.x"
   },
   "dependencies": {
     "@vercel/analytics": "^1.5.0",
