--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
     "node": "20.x"
   },
   "dependencies": {
+    "@netlify/plugin-nextjs": "^5.15.1",
     "@vercel/analytics": "^1.5.0",
     "date-fns": "^3.6.0",
     "lucide-react": "^0.468.0",
-    "next": "15.5.4",
+    "next": "15.5.7",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "zod": "^3.23.8"
